Fix leaderboard tab not using environment variables, fix current leaderboard player row showing more spacing at the bottom than the rest of the row

--- a/client/src/Component/Leaderboard/styles.module.css
+++ b/client/src/Component/Leaderboard/styles.module.css
@@ -6,7 +6,7 @@
 .leaderboard_player {
     border-radius: 10px;
     overflow: hidden;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 16, 0.19), 0 0.3rem 0.3rem rgba(0, 0, 16, 0.23);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 16, 0.19), 0 0.3rem 0.3rem rgba(0, 0, 16, 0.23);
     background-color: #FFC825;
